<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Boighor</string>
	<string name="version">2.2.2</string>
	<string name="no_media_warning">Storage media not present</string>
	<string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
	<string name="cancel">Cancel</string>
	<string name="search_backwards">Search backwards</string>
	<string name="search_forwards">Search forwards</string>
	<string name="search_document">Search document</string>
	<string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
	<string name="outline_title">Table of Contents</string>
	<string name="enter_password">Enter password</string>
	<string name="text_not_found">Text not found</string>
	<string name="searching_">Searching&#8230;</string>
	<string name="toggle_links">Highlight and enable links</string>
	<string name="no_further_occurrences_found">No further occurrences found</string>
	<string name="select">Select</string>
	<string name="search">Search</string>
	<string name="copy">Copy</string>
	<string name="strike_out">Strike-out</string>
	<string name="delete">Delete</string>
	<string name="highlight">Highlight</string>
	<string name="underline">Underline</string>
	<string name="edit_annotations">Edit annotations</string>
	<string name="ink">Ink</string>
	<string name="save">Save</string>
	<string name="print">Print</string>
	<string name="dismiss">Dismiss</string>
	<string name="parent_directory">[Up one level]</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="entering_reflow_mode">Entering reflow mode</string>
	<string name="leaving_reflow_mode">Leaving reflow mode</string>
	<string name="print_failed">Print failed</string>
	<string name="select_text">Select text</string>
	<string name="copied_to_clipboard">Copied to clipboard</string>
	<string name="no_text_selected">No text selected</string>
	<string name="draw_annotation">Draw annotation</string>
	<string name="nothing_to_save">Nothing to save</string>
	<string name="document_has_changes_save_them_">Document has changes. Save them?</string>
	<string name="cannot_open_document">Cannot open document</string>
	<string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
	<string name="cannot_open_file_Path">Cannot open file: %1$s</string>
	<string name="cannot_open_buffer">Cannot open buffer</string>
	<string name="fill_out_text_field">Fill out text field</string>
	<string name="okay">Okay</string>
	<string name="choose_value">Choose value</string>
	<string name="not_supported">Not supported</string>
	<string name="copy_text_to_the_clipboard">Copy text to the clipboard</string>
	<string name="more">More</string>
	<string name="accept">Accept</string>
	<string name="copy_text">copy text</string>
	<string name="format_currently_not_supported">Format currently not supported</string>
	<string name="toggle_reflow_mode">Toggle reflow mode</string>
	<string name="pagenumber">Enter pagenumber</string>
	<string name="menu_settings">Settings</string>
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
	<string name="title_about_me">About Me</string>
	<string name="security_enable_title">Enable App</string>
	<string name="security_enable_button_text">Check Validity</string>
	<string name="security_enable_hint_text">Enter Your Token</string>
	<string name="security_enable_enter_text">Enter Token Code</string>
	<string name="security_invalid_token_err_msg">Please enter a valid token</string>
	<string name="search_hint">Please enter book name</string>
	<string name="profile">About Us</string>
	<string name="facebook">Facebook</string>
	<string name="catalog">Catalog</string>
	<string name="contact">Contact Us</string>
	<string name="help">Help</string>
	<string name="exit">Exit</string>
	<string name="activation">Activate All</string>
	<string name="proof">Proof</string>
	<string name="spinner_category">Select Category</string>
	<string name="spinner_author">Select Author</string>
	<string name="spinner_book">Select Book</string>
	<string name="active_all">Activate All</string>
</resources>
